k8s/20_backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: greenops-backend
  namespace: greenops
spec:
  replicas: 1
  selector:
    matchLabels:
      app: greenops-backend
  template:
    metadata:
      labels:
        app: greenops-backend
    spec:
      containers:
        - name: backend
          image: ghcr.io/arash00009/greenops-backend:main
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 3
            periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: greenops-backend
  namespace: greenops
spec:
  selector:
    app: greenops-backend
  ports:
    - name: http
      port: 8080
      targetPort: 8080
